@@ -1,3 +1,7 @@
+LATEST
+
+* Fixed wrong texture for pink and gray glazed terracotta.
+
 1.4.4 - 2017-12-31
 
 * Windows installer now detects Java 9 installations.
